--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,6 +1,6 @@
 * {
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+    font-family: JetBrainsMono;
     font-size: 13px;
 }
 
@@ -102,17 +102,16 @@ button:hover {
 }
 
 #clock {
-    background-color: #64727D;
+    color: #eceff4;
+    background: transparent;
+    box-shadow: inset 0 -5px #81a1c1;
 }
 
 #battery {
-    background-color: #ffffff;
-    color: #000000;
-}
+    color: #eceff4;
+    background: transparent;
+    box-shadow: inset 0 -5px #81a1c1;
 
-#battery.charging, #battery.plugged {
-    color: #ffffff;
-    background-color: #26A65B;
 }
 
 @keyframes blink {
@@ -157,16 +156,22 @@ label:focus {
 }
 
 #cpu {
-    background-color: #2ecc71;
-    color: #000000;
+    color: #eceff4;
+    background: transparent;
+    box-shadow: inset 0 -5px #81a1c1;
 }
 
 #memory {
-    background-color: #9b59b6;
+    color: #eceff4;
+    background: transparent;
+    box-shadow: inset 0 -5px #81a1c1;
 }
 
 #disk {
-    background-color: #964B00;
+    color: #eceff4;
+    background: transparent;
+    box-shadow: inset 0 -5px #81a1c1;
+
 }
 
 #backlight {
@@ -174,21 +179,27 @@ label:focus {
 }
 
 #network {
-    background-color: #2980b9;
+    color: #eceff4;
+    background: transparent;
+    box-shadow: inset 0 -5px #81a1c1;
 }
 
 #network.disconnected {
-    background-color: #f53c3c;
+    color: #eceff4;
+    background: transparent;
+    box-shadow: inset 0 -5px #bf616a;
 }
 
 #pulseaudio {
-    background-color: #f1c40f;
-    color: #000000;
+    color: #eceff4;
+    background: transparent;
+    box-shadow: inset 0 -5px #81a1c1;
 }
 
 #pulseaudio.muted {
-    background-color: #90b1b1;
-    color: #2a5c45;
+    color: #eceff4;
+    background: transparent;
+    box-shadow: inset 0 -5px #d08770;
 }
 
 #wireplumber {
